# baudcast

./: .gitignore  LICENSE  README.md  pyproject.toml
baudcast/: __init__.py  __main__.py  audio_io.py  cli.py  config.py  demodulator.py  framing.py  modulator.py
tests/: test_demodulator.py  test_framing.py  test_modulator.py
warble/: demodulator.py  modulator.py
