[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baudcast"
version = "0.1.0"
description = "Transfer files between computers using sound waves."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.26",
  "sounddevice>=0.4.6",
]
authors = [
  { name = "Brian R. Bondy" }
]
keywords = ["audio", "fsk", "modem", "transfer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
baudcast = "baudcast.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["baudcast", "baudcast.*"]
